<resources>
    <string name="app_name">叮咚</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">账号:</string>
    <string name="password">密码:</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">忘记密码?</string>
    <!--<string name="usr_hint">UserName</string>-->
    <!--<string name="psd_hint">Password</string>-->
    <string name="remember_psd">记住密码</string>
    <string name="index">首页</string>
    <string name="plan">饮食计划</string>
    <string name="me">我</string>
    <string name="diet_plan_hint_text">添加健康饮食计划:</string>

    <string-array name="navigate_btns">
    </string-array>
    <string name="goods_btn">Goods Records</string>
    <string name="diet_btn">Diet Plan</string>
    <string name="me_btn">Me</string>
    <string name="action_settings">menu</string>
    <string name="cook">为今天的饮食\r\n做一个完美的计划吧</string>
    <array name="dummy_items">
        <item>牛奶</item>
        <item>蜂蜜</item>
        <item>饼干</item>
        <item>可乐</item>
        <item>很香的法式香辣面包</item>
        <item>长城红葡萄酒</item>
        <item>香奈儿</item>
        <item>Google Corp</item>
        <item>Microsoft Corp</item>
        <item>Apple Corp</item>
    </array>
    <string name="goods_barcode">商品编码</string>
    <string name="date_picker_title">选择日期</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_type">商品类型</string>
    <string name="goods_manufacturer">生产厂商</string>
    <string name="goods_production_date">生产日期</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_durability_period">保质时限</string>
    <string name="goods_manual_period">拆封时限</string>
</resources>
