<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View.activity.GoodsActivity"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/pic_height"
                android:src="@drawable/binguo"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_name"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="冰菓"
                    style="@style/content_style"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_type"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="图书图像类"
                    android:textSize="@dimen/content_size"
                    style="@style/content_style"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_manufacturer"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsManufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="角川书店"
                    android:textSize="@dimen/content_size"
                    style="@style/content_style"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_price"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="¥100.0"
                    android:textSize="@dimen/content_size"
                    style="@style/content_style"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_production_date"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsProductionDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2015-06-09"
                    style="@style/content_style"
                    android:textSize="@dimen/content_size"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_durability_period"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsDurabilityPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="十年"
                    style="@style/content_style"
                    android:textSize="@dimen/content_size"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/liner_layout_margin_style">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_manual_period"
                    style="@style/title_style"/>
                <TextView
                    android:id="@+id/goodsManualPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="两年"
                    style="@style/content_style"
                    android:textSize="@dimen/content_size"/>
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
