<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:cbd="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".View.activity.LoginActivity"
                android:background="@color/colorBackground">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/linearLayout_margin_left"
        android:layout_marginRight="@dimen/linearLayout_margin_right"
        android:layout_marginBottom="@dimen/linearLayout_margin_bottom">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:layout_gravity="center"
            android:layout_marginBottom="37dp">
            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@mipmap/login_me"
                android:layout_gravity="center"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginBottom="27dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="18dp"
                android:textColor="@color/colorContent"
                android:drawableBottom="@drawable/text_view_line"
                />
            <EditText
                android:id="@+id/usrEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textAlignment="center"
                android:drawableBottom="@drawable/edit_text_line"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginBottom="21dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18dp"
                android:textColor="@color/colorContent"
                android:drawableBottom="@drawable/text_view_line"/>
            <EditText
                android:id="@+id/psdEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="16"
                android:drawableBottom="@drawable/edit_text_line"/>
        </LinearLayout>
        <!--android:layout_marginTop="@dimen/linearLayout_margin_top"-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingEnd="50dp"
            android:layout_marginBottom="25dp">
            <com.rey.material.widget.CheckBox
                android:id="@+id/psdCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_psd"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/colorContent"
                cbd:cbd_strokeColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                style="@style/Material.Drawable.CheckBox"/>
            <TextView
                android:id="@+id/forget_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textSize="24dp"
            android:textColor="@color/bigColorContent"
            android:background="@drawable/button_round"/>
        </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_below="@id/ll1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginLeft="@dimen/linearLayout_margin_left"-->
        <!--android:layout_marginRight="@dimen/linearLayout_margin_right">-->
  <!---->
        <!--<Button-->
            <!--android:id="@+id/signUpBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sign_up"-->
            <!--android:textAllCaps="false"-->
            <!--android:layout_weight="1"/>-->
    <!--</LinearLayout>-->
    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cpv_animAutostart="false"
        app:cpv_indeterminate="true"
        app:cpv_thickness="6dp"
        app:cpv_color="@color/colorPrimaryDark"
        android:layout_centerInParent="true"/>
</RelativeLayout>
